--- a/main.scss
+++ b/main.scss
@@ -18,7 +18,6 @@ $anim-delay: $anim-dur / 5;
     box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
     -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
     -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
-    position: relative;
     overflow: hidden;
     opacity: 1;
     -webkit-transition: 0.3s ease-in-out;
@@ -386,7 +385,7 @@ img{
         margin-right: 2rem;
     }
 }        
-h2, .header, .footer{
+h2, .menu1 p{
     text-align: center;
     font-size: 2rem;
     color: #3d1319;
@@ -395,7 +394,7 @@ h3{
     font-size: 2rem;
     color: #3d1319;
 }
-.header, .footer{
+.menu1 p, .footer{
     font-weight: bold;
 }
 img{
@@ -817,13 +816,13 @@ h2{
         margin-right: 0.2rem;
     }
 }
-.menu4 > h2{
+.menu4 h2{
     color: #34C924;
 }
-.menu4 > h3, .menu3 > h3{
+.menu4 h3, .menu3 h3{
     color: black;
     font-style: italic;
 }
-.menu3 > h2{
+.menu3 h2{
     color: #0770e0;
 }
