--- a/style.css
+++ b/style.css
@@ -84,7 +84,6 @@ header h1 {
   box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
-  position: relative;
   overflow: hidden;
   opacity: 1;
   -webkit-transition: 0.3s ease-in-out;
@@ -143,7 +142,6 @@ header h1 {
   box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
-  position: relative;
   overflow: hidden;
   opacity: 1;
   -webkit-transition: 0.3s ease-in-out;
@@ -205,7 +203,6 @@ header h1 {
   box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
-  position: relative;
   overflow: hidden;
   opacity: 1;
   -webkit-transition: 0.3s ease-in-out;
@@ -269,7 +266,6 @@ header h1 {
   box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
-  position: relative;
   overflow: hidden;
   opacity: 1;
   -webkit-transition: 0.3s ease-in-out;
@@ -497,7 +493,7 @@ img {
   }
 }
 
-h2, .header, .footer {
+h2, .menu1 p {
   text-align: center;
   font-size: 2rem;
   color: #3d1319;
@@ -508,7 +504,7 @@ h3 {
   color: #3d1319;
 }
 
-.header, .footer {
+.menu1 p, .footer {
   font-weight: bold;
 }
 
@@ -1027,16 +1023,16 @@ h2 {
   }
 }
 
-.menu4 > h2 {
+.menu4 h2 {
   color: #34C924;
 }
 
-.menu4 > h3, .menu3 > h3 {
+.menu4 h3, .menu3 h3 {
   color: black;
   font-style: italic;
 }
 
-.menu3 > h2 {
+.menu3 h2 {
   color: #0770e0;
 }
 
