--- a/style.css
+++ b/style.css
@@ -13,6 +13,30 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "croissant_oneregular";
+  src: url("croissantone-regular-webfont.woff2") format("woff2"), url("croissantone-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "amitaregular";
+  src: url("amita-regular-webfont.woff2") format("woff2"), url("amita-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "kaushan_scriptregular";
+  src: url("kaushanscript-regular-webfont.woff2") format("woff2"), url("kaushanscript-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "titilliumitalic";
+  src: url("titillium-regularitalic-webfont.woff2") format("woff2"), url("titillium-regularitalic-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 html {
   font-size: 62.5%;
 }
@@ -96,6 +120,7 @@ header h1 {
   .btn_note {
     margin-bottom: 4rem;
     width: 40rem;
+    height: 20rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -153,6 +178,7 @@ header h1 {
 @media screen and (max-width: 1024px) {
   .btn_chic {
     width: 40rem;
+    height: 20rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -167,6 +193,7 @@ header h1 {
   transform: scale(1);
   -webkit-transform: scale(1);
   transition: 0.3s ease-in-out;
+  font-family: "croissant_oneregular";
 }
 .btn_chic p:hover {
   transform: scale(1.5);
@@ -174,10 +201,10 @@ header h1 {
 
 .chic {
   text-decoration: none;
-  font-family: Arial, sans-serif;
-  background: #924cf9;
-  background: linear-gradient(325deg, #924cf9 30%, #e0881d 93%);
-  background: -moz-linear-gradient(325deg, #924cf9 30%, #e0881d 93%);
+  background: -webkit-linear-gradient(156deg, #e0881d 26%, #924cf9 78%);
+  background: -o-linear-gradient(156deg, #e0881d 26%, #924cf9 78%);
+  background: -moz-linear-gradient(156deg, #e0881d 26%, #924cf9 78%);
+  background: linear-gradient(156deg, #e0881d 26%, #924cf9 78%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -215,6 +242,7 @@ header h1 {
   .btn_delice {
     margin-bottom: 4rem;
     width: 40rem;
+    height: 20rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -229,6 +257,7 @@ header h1 {
   transform: scale(1);
   -webkit-transform: scale(1);
   transition: 0.3s ease-in-out;
+  font-family: "amitaregular";
 }
 .btn_delice p:hover {
   transform: scale(1.5);
@@ -236,12 +265,13 @@ header h1 {
 
 .delice {
   text-decoration: none;
-  background: #1b4ce4;
-  background: linear-gradient(90deg, #1b4ce4 35%, #0889fb 54%);
-  background: -moz-linear-gradient(90deg, #1b4ce4 35%, #0889fb 54%);
+  background: -webkit-linear-gradient(156deg, #1b4ce4 48%, #0889fb 61%);
+  background: -o-linear-gradient(156deg, #1b4ce4 48%, #0889fb 61%);
+  background: -moz-linear-gradient(156deg, #1b4ce4 48%, #0889fb 61%);
+  background: linear-gradient(156deg, #1b4ce4 48%, #0889fb 61%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: "robotolight";
+  font-style: italic;
   font-weight: bold;
 }
 
@@ -277,6 +307,7 @@ header h1 {
 @media screen and (max-width: 1024px) {
   .btn_gout {
     width: 40rem;
+    height: 20rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -291,6 +322,7 @@ header h1 {
   transform: scale(1);
   -webkit-transform: scale(1);
   transition: 0.3s ease-in-out;
+  font-family: "kaushan_scriptregular";
 }
 .btn_gout p:hover {
   transform: scale(1.5);
@@ -298,12 +330,14 @@ header h1 {
 
 .gout {
   text-decoration: none;
-  background: #41963c;
-  background: linear-gradient(90deg, #41963c 23%, #beff7f 84%);
-  background: -moz-linear-gradient(90deg, #41963c 23%, #beff7f 84%);
+  background: -webkit-linear-gradient(151deg, #41963c 41%, #beff7f 78%);
+  background: -o-linear-gradient(151deg, #41963c 41%, #beff7f 78%);
+  background: -moz-linear-gradient(151deg, #41963c 41%, #beff7f 78%);
+  background: linear-gradient(151deg, #41963c 41%, #beff7f 78%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-style: italic;
+  font-weight: bold;
 }
 
 .carte_gout {
@@ -477,19 +511,22 @@ img {
 @media screen and (max-width: 1024px) {
   .menu1 {
     text-align: center;
-    padding-left: 4rem;
-    padding-right: 4rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     margin-left: 6rem;
     margin-right: 6rem;
+    padding-top: 2rem;
+    margin-top: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 }
 @media screen and (max-width: 400px) {
   .menu1 {
     text-align: center;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
   }
 }
 
@@ -515,12 +552,20 @@ img {
 }
 @media screen and (max-width: 1024px) {
   img {
-    width: 10rem;
+    width: 15rem;
+    height: 1rem;
   }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 550px) {
   img {
-    width: 5rem;
+    width: 8rem;
+    height: 1rem;
+  }
+}
+@media screen and (max-width: 350px) {
+  img {
+    width: 2rem;
+    height: 0.5rem;
   }
 }
 
@@ -556,6 +601,12 @@ h2 {
   font-size: 3rem;
   font-weight: bold;
 }
+@media screen and (max-width: 1024px) {
+  h2 {
+    padding-top: 2rem;
+    padding-bottom: 1.5rem;
+  }
+}
 
 .prelude, .point, .mouvement {
   display: inline-block;
@@ -570,16 +621,19 @@ h2 {
 @media screen and (max-width: 1024px) {
   .plat, .prix {
     font-size: 1.2rem;
+    font-family: "titilliumitalic";
+    padding-top: 2rem;
   }
 }
 @media screen and (max-width: 550px) {
   .plat, .prix {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 350px) {
   .plat, .prix {
-    font-size: 0.7rem;
+    font-size: 0.9rem;
+    margin-right: 0.1rem;
   }
 }
 
@@ -589,7 +643,9 @@ h2 {
 }
 @media screen and (max-width: 1024px) {
   .prix {
-    margin-left: 1rem;
+    margin-left: 2rem;
+    font-family: "titilliumitalic";
+    font-weight: bold;
   }
 }
 @media screen and (max-width: 550px) {
@@ -599,9 +655,8 @@ h2 {
 }
 @media screen and (max-width: 320px) {
   .prix {
-    margin-left: 0.2rem;
-    margin-right: 0.2rem;
-    font-size: 0.5rem;
+    margin-left: 0.1rem;
+    font-size: 1rem;
   }
 }
 
@@ -611,12 +666,8 @@ h2 {
 }
 @media screen and (max-width: 1024px) {
   .plat {
-    margin-right: 2rem;
-  }
-}
-@media screen and (max-width: 320px) {
-  .plat {
-    margin-left: 0.2rem;
+    margin-right: 1rem;
+    font-family: "titilliumitalic";
   }
 }
 
@@ -650,24 +701,31 @@ h2 {
     text-align: center;
     padding-left: 4rem;
     padding-right: 4rem;
-    margin-left: 6rem;
-    margin-right: 6rem;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    padding-top: 2rem;
+    margin-top: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+}
+@media screen and (max-width: 600px) {
+  .menu2 {
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
   }
 }
 @media screen and (max-width: 400px) {
   .menu2 {
-    text-align: center;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
   }
 }
 
 .titre_chic {
-  background: #924cf9;
-  background: linear-gradient(325deg, #924cf9 20%, #e0881d 93%);
-  background: -moz-linear-gradient(325deg, #924cf9 20%, #e0881d 93%);
+  background: -webkit-linear-gradient(156deg, #e0881d 26%, #924cf9 78%);
+  background: -o-linear-gradient(156deg, #e0881d 26%, #924cf9 78%);
+  background: -moz-linear-gradient(156deg, #e0881d 26%, #924cf9 78%);
+  background: linear-gradient(156deg, #e0881d 26%, #924cf9 78%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -696,12 +754,22 @@ h2 {
 @media screen and (max-width: 1024px) {
   .plat_appetit {
     font-size: 1.2rem;
+    font-family: "titilliumitalic";
+    padding-top: 2rem;
     margin-right: 2rem;
   }
 }
 @media screen and (max-width: 550px) {
   .plat_appetit {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+@media screen and (max-width: 350px) {
+  .plat_appetit {
+    font-size: 1rem;
+    margin: 0;
   }
 }
 
@@ -714,14 +782,22 @@ h2 {
 }
 @media screen and (max-width: 1024px) {
   .prix_appetit {
-    margin-left: 1rem;
+    margin-left: 2rem;
+    font-family: "titilliumitalic";
+    font-weight: bold;
     font-size: 1.2rem;
   }
 }
 @media screen and (max-width: 550px) {
   .prix_appetit {
-    margin-left: 0.5rem;
-    font-size: 0.8rem;
+    margin-left: 2rem;
+    font-size: 1.2rem;
+  }
+}
+@media screen and (max-width: 320px) {
+  .prix_appetit {
+    margin-left: 2rem;
+    font-size: 1rem;
   }
 }
 
@@ -749,18 +825,22 @@ h2 {
 @media screen and (max-width: 1024px) {
   .plat_papilles {
     font-size: 1.2rem;
+    font-family: "titilliumitalic";
+    padding-top: 2rem;
     margin-right: 2rem;
   }
 }
 @media screen and (max-width: 550px) {
   .plat_papilles {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
+    padding-left: 0rem;
+    padding-right: 0rem;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 350px) {
   .plat_papilles {
-    margin-left: 0.1rem;
-    font-size: 0.5rem;
+    font-size: 0.9rem;
+    margin-right: 0.1rem;
   }
 }
 
@@ -773,20 +853,22 @@ h2 {
 }
 @media screen and (max-width: 1024px) {
   .prix_papilles {
-    margin-left: 1rem;
+    margin-left: 2rem;
+    font-family: "titilliumitalic";
+    font-weight: bold;
     font-size: 1.2rem;
   }
 }
 @media screen and (max-width: 550px) {
   .prix_papilles {
-    margin-left: 0.5rem;
-    font-size: 0.8rem;
+    margin-left: 0.1rem;
+    font-size: 1.2rem;
   }
 }
 @media screen and (max-width: 320px) {
   .prix_papilles {
-    margin-right: 0.1rem;
-    font-size: 0.5rem;
+    margin-left: 0.1rem;
+    font-size: 1rem;
   }
 }
 
@@ -814,12 +896,20 @@ h2 {
 @media screen and (max-width: 1024px) {
   .plat_sucrée {
     font-size: 1.2rem;
+    font-family: "titilliumitalic";
+    padding-top: 2rem;
     margin-right: 2rem;
   }
 }
 @media screen and (max-width: 550px) {
   .plat_sucrée {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
+  }
+}
+@media screen and (max-width: 350px) {
+  .plat_sucrée {
+    font-size: 1.2rem;
+    margin: 0;
   }
 }
 
@@ -850,15 +940,23 @@ h2 {
     padding-right: 4rem;
     margin-left: 6rem;
     margin-right: 6rem;
+    padding-top: 2rem;
+    margin-top: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+}
+@media screen and (max-width: 600px) {
+  .menu3 {
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
   }
 }
 @media screen and (max-width: 400px) {
   .menu3 {
-    text-align: center;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
   }
 }
 
@@ -873,12 +971,21 @@ h2 {
 @media screen and (max-width: 1024px) {
   .plat_terminer {
     font-size: 1.2rem;
+    font-family: "titilliumitalic";
+    padding-top: 2rem;
     margin-right: 2rem;
   }
 }
 @media screen and (max-width: 550px) {
   .plat_terminer {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
+  }
+}
+@media screen and (max-width: 350px) {
+  .plat_terminer {
+    font-size: 1rem;
+    margin-right: 1rem;
+    margin-left: 0.1rem;
   }
 }
 
@@ -893,18 +1000,26 @@ h2 {
 @media screen and (max-width: 1024px) {
   .plat_commencer {
     font-size: 1.2rem;
-    margin-right: 2rem;
+    font-family: "titilliumitalic";
+    padding-top: 2rem;
   }
 }
 @media screen and (max-width: 550px) {
   .plat_commencer {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 350px) {
   .plat_commencer {
-    margin-left: 0.1rem;
-    font-size: 0.7rem;
+    font-size: 0.9rem;
+    margin-right: 0.1rem;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .plat_continuer {
+    font-size: 1rem;
+    margin: 0;
   }
 }
 
@@ -931,15 +1046,23 @@ h2 {
     padding-right: 4rem;
     margin-left: 6rem;
     margin-right: 6rem;
+    padding-top: 2rem;
+    margin-top: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+}
+@media screen and (max-width: 600px) {
+  .menu4 {
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
   }
 }
 @media screen and (max-width: 400px) {
   .menu4 {
-    text-align: center;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
   }
 }
 
@@ -954,18 +1077,20 @@ h2 {
 @media screen and (max-width: 1024px) {
   .plat_esquisse {
     font-size: 1.2rem;
-    margin-right: 2rem;
+    font-family: "titilliumitalic";
+    padding-top: 2rem;
+    margin-right: 8rem;
   }
 }
 @media screen and (max-width: 550px) {
   .plat_esquisse {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 350px) {
   .plat_esquisse {
-    margin-left: 0.1rem;
-    font-size: 0.7rem;
+    font-size: 1rem;
+    margin: 0;
   }
 }
 
@@ -980,19 +1105,19 @@ h2 {
 @media screen and (max-width: 1024px) {
   .plat_maître {
     font-size: 1.2rem;
-    margin-right: 2rem;
+    font-family: "titilliumitalic";
+    padding-top: 2rem;
   }
 }
 @media screen and (max-width: 550px) {
   .plat_maître {
-    font-size: 0.8rem;
-    margin-right: 0.5rem;
+    font-size: 1.2rem;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 350px) {
   .plat_maître {
-    margin-left: 0.1rem;
-    font-size: 0.7rem;
+    font-size: 0.9rem;
+    margin-right: 0.1rem;
   }
 }
 
@@ -1007,24 +1132,31 @@ h2 {
 @media screen and (max-width: 1024px) {
   .plat_art {
     font-size: 1.2rem;
-    margin-right: 2rem;
+    font-family: "titilliumitalic";
+    padding-top: 2rem;
   }
 }
 @media screen and (max-width: 550px) {
   .plat_art {
-    font-size: 0.8rem;
-    margin-right: 0.5rem;
+    font-size: 1.2rem;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 350px) {
   .plat_art {
-    font-size: 0.7rem;
-    margin-right: 0.2rem;
+    font-size: 0.9rem;
+    margin-right: 0.1rem;
   }
 }
 
 .menu4 h2 {
-  color: #34C924;
+  background: -webkit-linear-gradient(151deg, #41963c 41%, #beff7f 78%);
+  background: -o-linear-gradient(151deg, #41963c 41%, #beff7f 78%);
+  background: -moz-linear-gradient(151deg, #41963c 41%, #beff7f 78%);
+  background: linear-gradient(151deg, #41963c 41%, #beff7f 78%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-style: italic;
+  font-weight: bold;
 }
 
 .menu4 h3, .menu3 h3 {
@@ -1033,7 +1165,14 @@ h2 {
 }
 
 .menu3 h2 {
-  color: #0770e0;
+  background: -webkit-linear-gradient(156deg, #1b4ce4 48%, #0889fb 61%);
+  background: -o-linear-gradient(156deg, #1b4ce4 48%, #0889fb 61%);
+  background: -moz-linear-gradient(156deg, #1b4ce4 48%, #0889fb 61%);
+  background: linear-gradient(156deg, #1b4ce4 48%, #0889fb 61%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-style: italic;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=style.css.map */
